fineshed add and updates cart
