# src/modules/cart/validations/cartValidations.js
@@ -1,0 +1,8 @@
+import Joi from "joi";
+
+export const addProductsToCartSchema = Joi.object({
+  userId: Joi.string().required(),
+  productId: Joi.string().required(),
+  quantity: Joi.number().required(),
+  
+});
